rust/full_errors.txt
   Compiling pyo3-build-config v0.21.2
   Compiling pyo3-macros-backend v0.21.2
   Compiling pyo3-ffi v0.21.2
   Compiling pyo3 v0.21.2
   Compiling pyo3-macros v0.21.2
    Checking waton-crypto v0.1.0 (C:\Users\Arvy Kairi\Desktop\whatsapp\waton)
error[E0308]: mismatched types
   --> rust\src\signal.rs:190:17
    |
188 |             return Ok(SignedPreKeyRecord::new(
    |                       ----------------------- arguments to this function are incorrect
189 |                 self.id.into(),
190 |                 0,
    |                 ^ expected `Timestamp`, found integer
    |
note: associated function defined here
   --> C:\Users\Arvy Kairi\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\wa-rs-libsignal-0.2.0\src\protocol\state\signed_prekey.rs:66:8
    |
 66 |     fn new(id: Self::Id, timestamp: Timestamp, key_pair: &Self::KeyPair, signature: &[u8]) -> Self
    |        ^^^

For more information about this error, try `rustc --explain E0308`.
error: could not compile `waton-crypto` (lib) due to 1 previous error
